--- a/app/src/main/res/layout/fragment_nutrition_details.xml
+++ b/app/src/main/res/layout/fragment_nutrition_details.xml
@@ -3,7 +3,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_blue_light">
 
         <Button
             android:id="@+id/btnDone"
