--- a/app/src/main/res/layout/layout_fragment_food_item.xml
+++ b/app/src/main/res/layout/layout_fragment_food_item.xml
@@ -7,13 +7,17 @@
         <variable
             name="veggieName"
             type="java.lang.String" />
+
+        <variable
+            name="imageSrc"
+            type="java.lang.String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/holo_blue_light">
+        android:background="@drawable/bg">
 
         <TextView
             android:id="@+id/imageName"
@@ -21,12 +25,22 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:text="@{veggieName}"
-            android:textColor="@color/white"
+            android:textColor="@color/purple_700"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/foodImage"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_marginTop="20dp"
+            android:src="@{imageSrc}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imageName" />
 
         <Button
             android:id="@+id/showNutrition"
