--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,4 +13,13 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="StyleCollapsingToolbarExpanded">
+        <item name="colorPrimary">@color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="StyleCollapsingToolbarCollapsed">
+        <item name="colorPrimary">@color/white</item>
+    </style>
 </resources>
